<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".SftActivity">

	<EditText
		android:id="@+id/editTextFileToGet"
		android:layout_width="260dp"
		android:layout_height="60dp"
		android:autofillHints=""
		android:ems="10"
		android:hint="@string/file_to_get"
		android:inputType="textPersonName"
		android:minHeight="48dp"
		android:text=""
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.496"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.191" />

	<Button
		android:id="@+id/buttonGetFIle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="68dp"
		android:text="@string/get_file"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/editTextFileToGet"
		app:layout_constraintVertical_bias="0.0" />

	<Button
		android:id="@+id/buttonSendFile"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="244dp"
		android:text="@string/send_file"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

	<TextView
		android:id="@+id/textFileToSend"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="84dp"
		android:gravity="center"
		android:text="@string/file_chose_to_send"
		android:textSize="24sp"
		app:layout_constraintBottom_toTopOf="@+id/buttonSendFile"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.497"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/buttonGetFIle"
		app:layout_constraintVertical_bias="1.0" />

	<Button
		android:id="@+id/buttonCancelSelected"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/cancel_selected"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/buttonSendFile"
		app:layout_constraintVertical_bias="0.377" />

</androidx.constraintlayout.widget.ConstraintLayout>