<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/container"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:paddingTop="?attr/actionBarSize"
	tools:ignore="UseSwitchCompatOrMaterialXml">

	<Switch
		android:id="@+id/switch1"
		android:layout_width="170dp"
		android:layout_height="0dp"
		android:layout_marginStart="120dp"
		android:layout_marginEnd="121dp"
		android:layout_marginBottom="172dp"
		android:text="@string/OpenSwitch"
		android:textSize="20sp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		tools:ignore="MissingConstraints" />

	<TextView
		android:id="@+id/textView"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:gravity="center"
		android:text="@string/text_content"
		android:textSize="24sp"
		app:layout_constraintTop_toTopOf="parent"
		tools:layout_editor_absoluteX="0dp" />

	<Button
		android:id="@+id/button1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/button_text"
		app:layout_constraintBottom_toTopOf="@+id/switch1"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/editText"
		app:layout_constraintVertical_bias="0.404" />

	<EditText
		android:id="@+id/editText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="102dp"
		android:layout_marginEnd="99dp"
		android:autofillHints="Input something"
		android:ems="10"
		android:hint="@string/editText_text"
		android:inputType="textEmailAddress"
		android:maxLines="1"
		android:minHeight="48dp"
		android:text=""
		android:textColorHint="#757575"
		app:layout_constraintBottom_toTopOf="@+id/switch1"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/editTextNumber"
		app:layout_constraintVertical_bias="0.445" />

	<EditText
		android:id="@+id/editTextNumber"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="60dp"
		android:autofillHints=""
		android:ems="10"
		android:hint="@string/editText_setTime"
		android:inputType="number"
		android:minHeight="48dp"
		android:textColorHint="#757575"
		app:layout_constraintBottom_toTopOf="@+id/switch1"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView"
		app:layout_constraintVertical_bias="0.077" />

	<Button
		android:id="@+id/button_timeSet"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/button_setup"
		app:layout_constraintBottom_toTopOf="@+id/editText"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.498"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/editTextNumber"
		app:layout_constraintVertical_bias="0.429" />

</androidx.constraintlayout.widget.ConstraintLayout>